--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>HTML</title>
+    <title>Third</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello World</h1>
+        <h1>My 3rd repo</h1>
         <div class="content">
             <p>Does it work?</p>
         </div>
